--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
+    "bootstrap": "^5.0.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "react-bootstrap": "^1.6.1",
+    "react-bootstrap-icons": "^1.5.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "4.3.5"
   }
 }
